--- a/project.css
+++ b/project.css
@@ -1,10 +1,13 @@
-.logo{
+html{
+    font-family: 'Gilroy';
+}
+.icon-logo{
     z-index: 1;
     position: absolute;
+    left: 312px;
+    top: 40px;
     width: 153px;
     height: 46px;
-    left: 312px;
-    top: 30px;
 }
 nav{
     z-index: 1;
@@ -24,7 +27,6 @@ a{
     z-index: 1;
     width: 53px;
     height: 20px;
-    font-family: 'Gilroy';
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -41,7 +43,6 @@ a{
     height: 201px;
     left: 312px;
     top: 306px;
-    font-family: 'Gilroy';
     font-style: normal;
     font-weight: 700;
     font-size: 48px;
@@ -88,7 +89,6 @@ a{
     z-index: 1;
     position: absolute;
     left: 30px;
-    font-family: 'Gilroy';
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
@@ -100,7 +100,6 @@ a{
     position: absolute;
     left: 30px;
     top: 60px;
-    font-family: 'Gilroy';
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
